--- a/form.html
+++ b/form.html
@@ -7,37 +7,28 @@
 </head>
 <body>
     <h1>Formulir Isian</h1>
-    <form action="#" method="post">
-        <div>
-            <label for="name">Nama Lengkap</label>
-            <input type="text" placeholder="Nama" id="name">
-        </div>
-
+    <form action="/daftar" method="post">
+ 
         <div>
         <label for="name">Nama Lengkap</label>
-        <input type="text" placeholder="Nama" id="name">
+        <input type="text" placeholder="Nama" id="name" name="name">
         </div> 
 
         <div>
         <label for="email">Email</label>
-        <input type="email"placeholder="Email" id="email">
+        <input type="email"placeholder="Email" id="email" name="email">
         </div>
 
         <div>
         <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password">
+        <input type="password" placeholder="Password" id="password" name="password">
         </div>
 
         <div>
         <label for="phone">Phone</label>
-        <input type="number" placeholder="Phone" id="phone">
+        <input type="number" placeholder="Phone" id="phone" name="phone">
         </div>
-
-        <div>
-        <label for="">Color</label>
-        <input type="color" placeholder="color" id="color">
-        </div>  
-
+        <button type="submit">Kirim</button>
     </form>
     
 </body>
